force-app/main/default/objects/cdcpc__RD_TBL_PosCalRating__c/cdcpc__RD_TBL_PosCalRating__c.object-meta.xml
<CustomObject>
    <label>RD TBL PosCalRating</label>
    <nameField>
        <label>RD TBL PosCalRating</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD TBL PosCalRating</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>