force-app/main/default/objects/cdcpc__RD_TBL_PosCalRating__c/fields/cdcpc__MinTSMfgRngLL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MinTSMfgRngLL__c</fullName>
    <label>MinTSMfgRngLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>