force-app/main/default/objects/cdcpc__RD_TBL_PosCalRating__c/fields/cdcpc__NRSC1Thck__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NRSC1Thck__c</fullName>
    <label>NRSC1Thck</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>