force-app/main/default/objects/cdcpc__RD_TBL_PosCalRating__c/fields/cdcpc__NRSealthck__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NRSealthck__c</fullName>
    <label>NRSealthck</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>