force-app/main/default/objects/cdcpc__RD_TBL_PosCalRating__c/fields/cdcpc__TempLL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TempLL__c</fullName>
    <label>TempLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>