force-app/main/default/objects/cdcpc__RD_TBL_PosCalRating__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__TempLL__c</columns>
    <columns>cdcpc__TempUL__c</columns>
    <columns>cdcpc__MinGrdlRatedLL__c</columns>
    <columns>cdcpc__MinGrdlRatedUL__c</columns>
    <columns>cdcpc__MinTSMfgRngLL__c</columns>
    <columns>cdcpc__MinTSMfgRngUL__c</columns>
    <columns>cdcpc__NRSC1Thck__c</columns>
    <columns>cdcpc__NRSC2Thck__c</columns>
    <columns>cdcpc__SC1Thck__c</columns>
    <columns>cdcpc__SC2Thck__c</columns>
    <columns>cdcpc__SealThck__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>